# GoddamnMoth

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  main — копия (2).cc  main — копия (3).cc  main-shit.cc  main.cc  main.cpp  main.cu  main1.cpp  main_geometry_tests.cc  res_plot.gpl  sample.txt  test_dist.txt
Geometry/: Geometry.cpp  Geometry.h
LinearAlgebra/: Algebra.h  Matrix.cpp  Matrix.h  MatrixTemplate.h  MatrixTriangularSymmetric.h  MatrixTridiagonal.cpp  MatrixTridiagonal.h  Permutation.h  Scalar.h  Test.h  Vector.cpp
LinearAlgebra/Gpgpu/: GpgpuOpenCL.h
LinearAlgebra/Simd/: SimdBlock.h  SimdSSE.h
LinearAlgebra/Utils/: Array2.h  Assert.h  Progression.h  array.h
libCommon/src/: CommTest.hh
libGeometry/: Geometry.cpp  Geometry.h
libGeometry2D/src/: GeomBase.hh  GeomBox.hh  GeomDelaunay.cc  GeomDelaunay.hh  GeomEdge.cc  GeomEdge.hh  GeomEdgeList.cc  GeomEdgeList.hh  GeomMesh.cc  GeomMesh.hh  GeomMesh2.cc  GeomMesh2.hh  GeomPoint.cc  GeomPoint.hh  GeomPoly.cc  GeomPoly.hh  GeomPolygoneList.hh  GeomSort.cc  GeomSort.hh  GeomTetrahedron.cc  GeomTetrahedron.hh  GeomTriangle.cc  GeomTriangle.hh  GeomTriangulation.cc  GeomTriangulation.hh
libLinearAlgebra/: Doxyfile  SystemSolver.h
libLinearAlgebra/src/: Matrix.h  SolverUtils.h  Test.h  Vector.h
libLinearAlgebra/src/Simd/: SimdBlockSSE64.h
libLinearAlgebra/src/Utils/: Array1.h  Parallel.h
libPosix/src/: PosixFork.cc
lib_source/fade2d/include/: MeshGenParams.h
